Add unit test for catalog service client